scrollbar fix
fixed down scrollbar in home and vertical in contact us

--- a/assets/css/styles_contact.css
+++ b/assets/css/styles_contact.css
@@ -1,5 +1,5 @@
 body{
-    overflow-x: hidden;
+    overflow-y: hidden;
 }
 .mre5 {
     margin-right: 35px !important
